--- a/res/layout/activity_buy_order_details.xml
+++ b/res/layout/activity_buy_order_details.xml
@@ -211,7 +211,7 @@
             android:text="返回" />
 
         <Button
-            android:id="@+id/btnlook"
+            android:id="@+id/btnComment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
