--- a/res/layout/activity_buy_order_details.xml
+++ b/res/layout/activity_buy_order_details.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:padding="16dp"
         android:text="订单信息"
         android:textSize="18sp"
@@ -32,18 +32,20 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
+            android:id="@+id/tvState1"
             android:background="@android:color/darker_gray"
             android:text="1.已付款"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
+             android:id="@+id/tvState2"
             android:background="@android:color/darker_gray"
             android:text="2.已发货"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:layout_width="0dp"
@@ -52,7 +54,8 @@
             android:layout_weight="1"
             android:background="@android:color/darker_gray"
             android:text="3.交易成功"
-            android:textSize="10sp" />
+             android:id="@+id/tvState3"
+            android:textSize="12sp" />
 
         <TextView
             android:layout_width="0dp"
@@ -62,7 +65,8 @@
             android:layout_weight="1"
             android:background="@android:color/darker_gray"
             android:text="4.已评价"
-            android:textSize="10sp" />
+             android:id="@+id/tvState4"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <View
@@ -73,8 +77,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal" >
 
         <TextView
@@ -117,78 +121,92 @@
         android:layout_height="1dp"
         android:background="@android:color/darker_gray" />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
+        android:orientation="vertical"
         android:padding="8dp" >
 
-        <ImageView
-            android:id="@+id/ivImg"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_launcher" />
-
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="90dp" >
+            android:background="@android:color/white"
+            android:padding="8dp" >
 
-            <TextView
-                android:id="@+id/tvTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="18dp"
-                android:text="Title"
-                android:textColor="@android:color/black"
-                android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/ivImg"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_launcher" />
 
-            <TextView
-                android:id="@+id/tvMoney"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:gravity="left"
-                android:paddingRight="10dp"
-                android:text="Amount of money"
-                android:textColor="#DD0000" />
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/tvState"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="45dp"
-                android:gravity="left"
-                android:paddingRight="10dp"
-                android:text="状态" />
-        </FrameLayout>
-    </FrameLayout>
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="18dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Title"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvMoney"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="left"
+                    android:paddingRight="10dp"
+                    android:text="Amount of money"
+                    android:textColor="#DD0000" />
+
+                <TextView
+                    android:id="@+id/tvState"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="left"
+                    android:paddingRight="10dp"
+                    android:text="状态" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal" >
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:padding="10dp" >
 
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/tvBuyer"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
             android:text="收货人" />
 
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/tvPhone"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="名字" />
-
-        <TextView
-            android:layout_width="0dp"
+            android:text="手机号码" />
+         <TextView
+            android:id="@+id/tvTradeTime"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="电话号码" />
+            android:text="交易时间" />
     </LinearLayout>
 
     <View
@@ -200,24 +218,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:orientation="horizontal" >
 
         <Button
             android:id="@+id/btnback"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:text="返回" />
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:textSize="12sp"
+            android:background="@android:color/darker_gray"
+            android:text="返回"
+             />
 
         <Button
             android:id="@+id/btnComment"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="30dp"
+            android:background="@android:color/holo_blue_bright"
+            android:textSize="12sp"
             android:text="查看评价" />
+         <Button
+            android:id="@+id/btnConfirm"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="30dp"
+            android:background="@android:color/holo_blue_bright"
+            android:textSize="12sp"
+            android:text="确认收货" />
     </LinearLayout>
 
 </LinearLayout>
