--- a/res/layout/activity_sell_order_details.xml
+++ b/res/layout/activity_sell_order_details.xml
@@ -86,7 +86,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/tvReceiver"
+                android:id="@+id/tvBuyer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
