--- a/res/layout/item_mypublish.xml
+++ b/res/layout/item_mypublish.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="100dp"
     android:background="@android:color/white"
     android:padding="8dp" >
 
@@ -13,15 +12,17 @@
         android:layout_centerInParent="true"
         android:src="@drawable/ic_launcher" />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp" >
+        android:layout_marginLeft="10dp"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="18dp"
+            android:layout_marginTop="10dp"
             android:text="Title"
             android:textColor="@android:color/black"
             android:textStyle="bold" />
@@ -30,21 +31,20 @@
             android:id="@+id/tvMoney"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="5dp"
             android:gravity="left"
-            android:text="Amount of money"
             android:paddingRight="10dp"
+            android:text="Amount of money"
             android:textColor="#DD0000" />
-         <TextView
+
+        <TextView
             android:id="@+id/tvState"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="5dp"
             android:gravity="left"
-            android:text="状态"
             android:paddingRight="10dp"
-             />
-    </FrameLayout>
+            android:text="状态" />
+    </LinearLayout>
 
-
-</FrameLayout>
+</LinearLayout>
