--- a/res/layout/widget_buy_item.xml
+++ b/res/layout/widget_buy_item.xml
@@ -1,66 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="100dp"
     android:background="@android:color/white"
+    android:orientation="vertical"
     android:padding="8dp" >
 
-    <ImageView
-        android:id="@+id/ivImg"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/ic_launcher" />
-
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp" >
+        android:background="@android:color/white"
+        android:padding="8dp" >
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="18dp"
-            android:text="Title"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/ivImg"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_launcher" />
 
-        <TextView
-            android:id="@+id/tvMoney"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:gravity="right"
-            android:text="Amount of money"
-            android:paddingRight="10dp"
-            android:textColor="#DD0000" />
-    </FrameLayout>
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical" >
 
-    <View 
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                android:layout_marginTop="10dp"
+                android:text="Title"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvMoney"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:gravity="left"
+                android:paddingRight="10dp"
+                android:text="Amount of money"
+                android:textColor="#DD0000" />
+
+            <TextView
+                android:id="@+id/tvState"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:gravity="left"
+                android:paddingRight="10dp"
+                android:text="状态" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@android:color/darker_gray"
-        android:layout_marginTop="90dp"
-        />
-    <Button 
-        android:layout_width="100sp"
-        android:layout_height="40sp"
-        android:text="联系卖家"
-        android:id="@+id/btnSeller"
-        android:focusable="false"
-        android:layout_marginTop="90dp"
-        />
-    <Button
-        android:id="@+id/btnLook"
-        android:layout_width="100sp"
-        android:layout_height="40sp"
-        android:layout_marginTop="90dp"
-        android:layout_gravity="right"
-        android:layout_marginRight="20dp"
-        android:focusable="false"
-        
-        android:text="查看评价"
-        android:textColor="@android:color/black" />
+        android:layout_marginTop="5dp"
+        android:background="@android:color/darker_gray" />
+<!-- 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal" >
 
-</FrameLayout>
+        <Button
+            android:id="@+id/btnCommunicate"
+            android:layout_width="100dp"
+            android:layout_height="25dp"
+            android:background="@drawable/communication_with_me"
+            android:focusable="false" />
+
+         <Button
+            android:id="@+id/btnComment"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:background="@android:color/holo_blue_bright"
+            android:textSize="12sp"
+            android:focusable="false"
+            android:layout_marginLeft="100dp"
+            android:text="查看评价" />
+    </LinearLayout>
+ -->
+</LinearLayout>
