--- a/res/layout/activity_new_goods.xml
+++ b/res/layout/activity_new_goods.xml
@@ -24,7 +24,7 @@
         android:background="@android:color/darker_gray" />
 
     <EditText
-        android:id="@+id/edit_title"
+        android:id="@+id/new_title"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
@@ -41,11 +41,11 @@
         android:id="@+id/line2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/edit_title"
+        android:layout_below="@+id/new_title"
         android:background="@android:color/darker_gray" />
 
     <EditText
-        android:id="@+id/edit_content"
+        android:id="@+id/new_content"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_alignParentLeft="true"
@@ -64,7 +64,7 @@
         android:id="@+id/line3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/edit_content"
+        android:layout_below="@+id/new_content"
         android:background="@android:color/darker_gray" />
 
     <View
@@ -120,7 +120,7 @@
         android:textSize="15sp" />
 
     <EditText
-        android:id="@+id/edit_originalprice"
+        android:id="@+id/new_originalprice"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_below="@+id/line7"
