--- a/res/layout/fragment_page_myprofile.xml
+++ b/res/layout/fragment_page_myprofile.xml
@@ -36,7 +36,7 @@
 
             <TextView
                 android:id="@+id/tvPublish"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
@@ -50,7 +50,7 @@
 
             <TextView
                 android:id="@+id/tvSelled"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
@@ -64,7 +64,7 @@
 
             <TextView
                 android:id="@+id/tvBuyed"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
@@ -78,7 +78,7 @@
 
             <TextView
                 android:id="@+id/tvCollection"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
@@ -92,7 +92,7 @@
 
             <TextView
                 android:id="@+id/tvReputation"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
@@ -106,7 +106,7 @@
 
             <TextView
                 android:id="@+id/tvData"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
@@ -120,11 +120,11 @@
 
             <TextView
                 android:id="@+id/tvUser"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
-                android:text="我的账号" />
+                android:text="我的钱包" />
 
             <View
                 android:layout_width="match_parent"
