--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -20,49 +20,121 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         class="com.swqs.schooltrade.fragment.InputcellSimpletextFragment"
-        tools:layout="@layout/fragment_inputcell_simpletext" />
+        tools:layout="@layout/fragment_inputcell_simpletext_login" />
 
     <fragment
         android:id="@+id/input_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         class="com.swqs.schooltrade.fragment.InputcellSimpletextFragment"
-        tools:layout="@layout/fragment_inputcell_simpletext" />
+        tools:layout="@layout/fragment_inputcell_simpletext_login" />
 
+<LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >  
+     <LinearLayout 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    
+    >
+            <RelativeLayout  
+            android:layout_width="fill_parent"  
+            android:layout_height="wrap_content"  
+            android:layout_marginLeft="15dp"  
+            android:layout_marginTop="5dp" >  
+  
+            <CheckBox  
+                android:id="@+id/cb_passworda"  
+                android:layout_width="wrap_content"  
+                android:layout_height="25dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/cb_passworda"
+                android:gravity="center"
+                android:text="记住密码"
+                android:textColor="#00868B" />
+  
+        </RelativeLayout>  
+  
+        <RelativeLayout  
+            android:layout_width="fill_parent"  
+            android:layout_height="wrap_content"  
+            android:layout_marginLeft="15dp"  
+            android:layout_marginTop="3dp" >  
+  
+           <CheckBox  
+                android:id="@+id/cb_logina"  
+                android:layout_width="wrap_content"  
+                android:layout_height="25dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/cb_logina"
+                android:gravity="center"
+                android:text="自动登录"
+                android:textColor="#00868B" />
+  
+        </RelativeLayout> 
+         </LinearLayout>
+         
+     <LinearLayout 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginLeft="140dp"
+    android:layout_marginTop="4dp"
+    >
     <TextView
         android:id="@+id/btn_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:padding="5dp"
-        android:text="忘记密码？"
+        android:text="忘记密码"
         android:textColor="#00f" />
-
+    
+    <TextView
+        android:id="@+id/btn_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_gravity="right"
+        android:padding="5dp"
+        android:text="免费注册"
+        android:textColor="#00f" />
+    
+    </LinearLayout>
+</LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="140dp"
-            android:layout_height="50sp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:textColor="@android:color/white"
-            android:background="@drawable/selector_btn"
-            android:text="登陆" />
+        <Button  
+            android:id="@+id/btn_login"  
+            android:layout_width="200dp" 
+            android:layout_gravity="center" 
+            android:layout_height="45dip"  
+            android:layout_marginLeft="15dp"  
+            android:layout_marginRight="15dp"  
+            android:layout_marginTop="15dp"  
+            android:background="@drawable/selector_btn"  
+            android:gravity="center"  
+            android:paddingLeft="10dip"  
+            android:text="登陆"  
+            android:textColor="#ffffff" />  
+  
+ 
+    </LinearLayout>  
+  
 
-        <Button
-            android:id="@+id/btn_register"
-            android:layout_width="100dp"
-            android:layout_height="50sp"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:textColor="@android:color/white"
-            android:background="@drawable/selector_btn2"
-            android:text="免费注册" 
-            />
-    </LinearLayout>
 
 </LinearLayout>
