--- a/res/layout/widget_comment_item.xml
+++ b/res/layout/widget_comment_item.xml
@@ -1,47 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="50dp"
     android:padding="5dp" >
 
-    <TextView
-        android:id="@+id/id_account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/account_avatar"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/account_avatar"
-        android:text="name"
-        android:textSize="10sp" />
-
-    <TextView
-        android:id="@+id/comment"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/id_account"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@id/account_avatar"
-        android:text="Content Text"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
+        android:layout_height="wrap_content" >
 
-    <com.swqs.schooltrade.util.AvatarView
-        android:id="@+id/account_avatar"
-        android:layout_width="30dp"
-        android:layout_height="30dp" />
+        <TextView
+            android:id="@+id/id_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/account_avatar"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/account_avatar"
+            android:text="name"
+            android:textSize="10sp" />
 
-    <TextView
-        android:id="@+id/createdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/comment"
-        android:layout_alignTop="@+id/id_account"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
-        android:text="createdate"
-        android:textSize="10sp" />
+        <TextView
+            android:id="@+id/comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/id_account"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/account_avatar"
+            android:text="Content Text"
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
 
-</RelativeLayout>
+        <com.swqs.schooltrade.util.AvatarView
+            android:id="@+id/account_avatar"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
+
+        <TextView
+            android:id="@+id/createdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/comment"
+            android:layout_alignTop="@+id/id_account"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:text="createdate"
+            android:textSize="10sp" />
+    </RelativeLayout>
+
+</LinearLayout>
