--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,140 +1,110 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:padding="16dp"
-        android:text="welcome"
-        android:textColor="#1F5B8D"
-        android:textSize="36sp"
-        android:textStyle="bold" />
-
-    <fragment
-        android:id="@+id/input_account"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        class="com.swqs.schooltrade.fragment.InputcellSimpletextFragment"
-        tools:layout="@layout/fragment_inputcell_simpletext_login" />
-
-    <fragment
-        android:id="@+id/input_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        class="com.swqs.schooltrade.fragment.InputcellSimpletextFragment"
-        tools:layout="@layout/fragment_inputcell_simpletext_login" />
-
-<LinearLayout 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >  
-     <LinearLayout 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:background="@drawable/login_bg"
+    android:gravity="center"
     android:orientation="vertical"
-    
-    >
-            <RelativeLayout  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"  
-            android:layout_marginLeft="15dp"  
-            android:layout_marginTop="5dp" >  
-  
-            <CheckBox  
-                android:id="@+id/cb_passworda"  
-                android:layout_width="wrap_content"  
-                android:layout_height="25dp" />
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.login.MainActivity" >
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/cb_passworda"
-                android:gravity="center"
-                android:text="记住密码"
-                android:textColor="#00868B" />
-  
-        </RelativeLayout>  
-  
-        <RelativeLayout  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"  
-            android:layout_marginLeft="15dp"  
-            android:layout_marginTop="3dp" >  
-  
-           <CheckBox  
-                android:id="@+id/cb_logina"  
-                android:layout_width="wrap_content"  
-                android:layout_height="25dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/cb_logina"
-                android:gravity="center"
-                android:text="自动登录"
-                android:textColor="#00868B" />
-  
-        </RelativeLayout> 
-         </LinearLayout>
-         
-     <LinearLayout 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginLeft="140dp"
-    android:layout_marginTop="4dp"
-    >
-    <TextView
-        android:id="@+id/btn_forgot_password"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:padding="5dp"
-        android:text="忘记密码"
-        android:textColor="#00f" />
-    
-    <TextView
-        android:id="@+id/btn_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_gravity="right"
-        android:padding="5dp"
-        android:text="免费注册"
-        android:textColor="#00f" />
-    
-    </LinearLayout>
-</LinearLayout>
-    <LinearLayout
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="30dp"
+        android:src="@drawable/icon" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_layout_input" >
 
-        <Button  
-            android:id="@+id/btn_login"  
-            android:layout_width="200dp" 
-            android:layout_gravity="center" 
-            android:layout_height="45dip"  
-            android:layout_marginLeft="15dp"  
-            android:layout_marginRight="15dp"  
-            android:layout_marginTop="15dp"  
-            android:background="@drawable/selector_btn"  
-            android:gravity="center"  
-            android:paddingLeft="10dip"  
-            android:text="登陆"  
-            android:textColor="#ffffff" />  
-  
- 
-    </LinearLayout>  
-  
+        <ImageView
+            android:id="@+id/ivNick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:src="@drawable/nickname" />
 
+        <EditText
+            android:id="@+id/etAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/ivNick"
+            android:layout_alignTop="@id/ivNick"
+            android:layout_marginLeft="10dp"
+            android:layout_toEndOf="@id/ivNick"
+            android:singleLine="true"
+            android:background="@null"
+            android:hint="账号"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_below="@id/ivNick"
+            android:background="@drawable/line" />
+
+        <ImageView
+            android:id="@+id/ivPwd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ivNick"
+            android:padding="6dp"
+            android:src="@drawable/password" />
+
+        <EditText
+            android:id="@+id/etPwd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/ivPwd"
+            android:layout_alignTop="@id/ivPwd"
+            android:layout_below="@id/etAccount"
+            android:layout_marginLeft="10dp"
+            android:layout_toEndOf="@id/ivPwd"
+            android:background="@null"
+            android:inputType="textPassword"
+            android:hint="密码"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white" />
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="match_parent"
+        android:layout_height="35dip"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/selector_btn"
+        android:text="登录"
+        android:textColor="@android:color/white" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" >
+
+        <TextView
+            android:id="@+id/tvForgetPwd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="忘记密码?"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/tvRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="5dp"
+            android:text="现在去注册"
+            android:textColor="@android:color/white" />
+    </RelativeLayout>
 
 </LinearLayout>
