修改商品留言区用户头像为圆形头像

--- a/res/layout/widget_comment_item.xml
+++ b/res/layout/widget_comment_item.xml
@@ -32,7 +32,7 @@
             android:textColor="@android:color/black"
             android:textSize="15sp" />
 
-        <com.swqs.schooltrade.util.AvatarView
+        <com.swqs.schooltrade.util.RoundImageView
             android:id="@+id/account_avatar"
             android:layout_width="30dp"
             android:layout_height="30dp" />
