--- a/res/layout/activity_mypublish.xml
+++ b/res/layout/activity_mypublish.xml
@@ -15,7 +15,7 @@
         android:id="@+id/lvGoods"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="45dp"
+        android:scrollbars="none"
         android:layout_marginBottom="5dp" >
     </ListView>
 </LinearLayout>
