--- a/res/layout/fragment_buy_details.xml
+++ b/res/layout/fragment_buy_details.xml
@@ -12,19 +12,16 @@
         android:layout_height="44dp"
         android:background="@android:color/white">
     
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="我买到的"
-        android:id="@+id/tvTitle"
-        android:textSize="18sp"/>
+   <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="我买到的"
+            android:id="@+id/tvTitle"
+            android:textColor="@android:color/white"
+            android:background="#1F5B8D"
+            android:textSize="20sp" />
     
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_gravity="bottom"
-        android:background="@android:color/darker_gray"/>
     </FrameLayout>
 
     <ListView
