--- a/res/layout/fragment_page_goods_list.xml
+++ b/res/layout/fragment_page_goods_list.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="45dp"
+        android:scrollbars="none"
         android:layout_marginBottom="5dp" >
     </ListView>
 
