--- a/res/layout/fragment_page_myprofile.xml
+++ b/res/layout/fragment_page_myprofile.xml
@@ -6,6 +6,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:scrollbars="none"
         android:layout_height="wrap_content" >
 
         <LinearLayout
