用邮箱注册账号

--- a/res/drawable/shape_layout_input.xml
+++ b/res/drawable/shape_layout_input.xml
@@ -4,5 +4,8 @@
     <stroke
         android:width="0.5dp"
         android:color="@android:color/darker_gray" />
+    <solid 
+        android:color="#00FFFFFF"
+        />
 
 </shape>
