--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     android:background="@drawable/login_bg" >
 
     <LinearLayout
@@ -40,7 +41,7 @@
                 android:layout_alignBottom="@id/ivNick"
                 android:layout_alignTop="@id/ivNick"
                 android:layout_marginLeft="10dp"
-                android:layout_toEndOf="@id/ivNick"
+                android:layout_toRightOf="@id/ivNick"
                 android:background="@null"
                 android:hint="账号"
                 android:singleLine="true"
@@ -69,7 +70,7 @@
                 android:layout_alignTop="@id/ivPwd"
                 android:layout_below="@id/etAccount"
                 android:layout_marginLeft="10dp"
-                android:layout_toEndOf="@id/ivPwd"
+                android:layout_toRightOf="@id/ivPwd"
                 android:background="@null"
                 android:hint="密码"
                 android:inputType="textPassword"
@@ -80,7 +81,7 @@
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:background="@drawable/selector_btn"
