--- a/res/layout/widget_comment_item.xml
+++ b/res/layout/widget_comment_item.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="50dp"
     android:padding="5dp" >
 
     <RelativeLayout
@@ -22,7 +21,7 @@
 
         <TextView
             android:id="@+id/comment"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/id_account"
             android:layout_centerVertical="true"
@@ -41,12 +40,22 @@
             android:id="@+id/createdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/comment"
+            android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/id_account"
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
             android:text="createdate"
             android:textSize="10sp" />
+        <TextView 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvNumFloor"
+            android:text="沙发"
+            android:layout_alignRight="@id/createdate"
+            android:layout_below="@id/createdate"
+            android:layout_marginTop="5dp"
+            android:textSize="12sp"
+            />
     </RelativeLayout>
 
 </LinearLayout>
