--- a/res/layout/widget_goods_detail.xml
+++ b/res/layout/widget_goods_detail.xml
@@ -5,7 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+     <RelativeLayout 
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/pale_blue"
+        >
+     <TextView
         android:id="@+id/text_item"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -15,6 +20,27 @@
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
+        <ImageView 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/ivBack"
+            android:layout_centerVertical="true"
+            />
+        <Button 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnCollect"
+            android:text="收藏"
+            android:layout_margin="6dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:textColor="@color/white"
+            android:background="@drawable/selector_send_comment_btn"
+            />
+    </RelativeLayout>
+   
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
