--- a/res/layout/activity_my_collection.xml
+++ b/res/layout/activity_my_collection.xml
@@ -7,7 +7,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center"
-            android:text="我收藏的"
+            android:text="我的收藏"
             android:textColor="@android:color/white"
             android:background="#1F5B8D"
             android:textSize="20sp" />
