--- a/res/layout/item_goods_image.xml
+++ b/res/layout/item_goods_image.xml
@@ -6,9 +6,10 @@
     
     <ImageView
         android:id="@+id/image_goods"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="5dp"
+        android:layout_gravity="center_horizontal"
         android:src="@android:drawable/alert_light_frame" />
 
 </LinearLayout>
