--- a/res/layout/widget_goods_detail.xml
+++ b/res/layout/widget_goods_detail.xml
@@ -131,11 +131,17 @@
                     android:layout_alignRight="@+id/content_originalprice"
                     android:layout_below="@+id/avatar"
                     android:layout_marginTop="5dp"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:text="标题"
                     android:textSize="15sp" />
+                <View 
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@drawable/line"
+                    android:layout_below="@id/content_title"
+                    />
 
                 <TextView
                     android:id="@+id/content_item"
